log
Thu, Mar 27, 2025  1:43:21 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025  1:44:26 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
47d5e2f
Thu, Mar 27, 2025  1:56:04 PM: 
 list.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
c7c68c9
Thu, Mar 27, 2025  2:03:08 PM: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
4b328e4
Thu, Mar 27, 2025  2:05:23 PM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|4
total_score: 25/70
6b86c16
Thu, Mar 27, 2025  2:07:04 PM: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
5c40ba5
Thu, Mar 27, 2025  2:16:58 PM: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
7818919
Thu, Mar 27, 2025  2:19:53 PM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  10|2
total_score: 45/70
a9ed82c
Thu, Mar 27, 2025  2:28:09 PM: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
a4ca84e
Thu, Mar 27, 2025  2:29:39 PM: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  10|2
total_score: 45/70
d6cd3a5
Thu, Mar 27, 2025  2:33:05 PM: 
 list.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  10|2
total_score: 45/70
e056d78
Thu, Mar 27, 2025  2:34:20 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
3ca10d4
Thu, Mar 27, 2025  2:36:27 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
dc1d638
Thu, Mar 27, 2025  2:38:47 PM: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|0
2393441
Thu, Mar 27, 2025  2:40:51 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
3e22f4b
Thu, Mar 27, 2025  3:47:06 PM: 
 list.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  12|0
total_score: 70/70
90d6274
